Fixed broken tests due to collapsing header menu

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -87,7 +87,7 @@ th.sort-both:after {
 }
 
 .header-search-input {
-    width: 70% !important;
+    width: 50% !important;
     float: left;
 }
 
